[package]
name = "ghaladb"
version = "0.1.0"
authors = ["Matt Gathu <mattgathu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
snap = "1"
log = "0.4"
patricia_tree = { version = "0.6", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
typed-builder = "0.9"
contracts = "0.6.3"
bloomfilter = "1.0.12"

[features]
default = []

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.8"
env_logger = "0.10"
tempfile = "*"

[lib]
bench = false

[[bench]]
name = "db_benchmark"
harness = false
